Regex/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDAND
    DIVIDE
    EQUALEQUAL
    FUNCTION
    GE
    GT
    LE
    LT
    MINUS
    NOT
    OROR
    PLUS
    RETURN
    TIMES
    NOTEQUAL
    STATEMENT
    SPACE
    INVERTED_COMMA
    PERCENTAGE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement program
Rule 2     program -> <empty>
Rule 3     statements -> statement statements
Rule 4     statements -> <empty>
Rule 5     statement -> assignment
Rule 6     statement -> if
Rule 7     statement -> for
Rule 8     statement -> array
Rule 9     statement -> func
Rule 10    statement -> print
Rule 11    statement -> <empty>
Rule 12    func -> type IDENTIFIER LPAREN args RPAREN LBRACE RBRACE
Rule 13    args -> type IDENTIFIER COMMA args
Rule 14    args -> type IDENTIFIER
Rule 15    args -> <empty>
Rule 16    func -> type IDENTIFIER LPAREN args RPAREN LBRACE statements RBRACE
Rule 17    func -> IDENTIFIER LPAREN rec RPAREN SEMICOLON
Rule 18    rec -> exp
Rule 19    rec -> exp COMMA rec
Rule 20    rec -> <empty>
Rule 21    func -> type IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
Rule 22    assignment -> IDENTIFIER OPERATOR SEMICOLON
Rule 23    assignment -> IDENTIFIER EQUAL exp SEMICOLON
Rule 24    assignment -> type IDENTIFIER EQUAL exp SEMICOLON
Rule 25    assignment -> type IDENTIFIER SEMICOLON
Rule 26    if -> IF LPAREN exp_if RPAREN LBRACE statements RBRACE else_elseif
Rule 27    else_elseif -> elseif else_elseif
Rule 28    else_elseif -> else else_elseif
Rule 29    else_elseif -> <empty>
Rule 30    elseif -> ELSE IF LPAREN exp_if RPAREN LBRACE statements RBRACE
Rule 31    else -> ELSE LBRACE statements RBRACE
Rule 32    for -> FOR LPAREN exp_for RPAREN LBRACE statements RBRACE
Rule 33    exp_if -> IDENTIFIER
Rule 34    exp_if -> NUMBER
Rule 35    exp_if -> CHAR
Rule 36    exp_if -> exp_if RELATIONALOPERATOR exp_if
Rule 37    exp_for -> init exp_if SEMICOLON increment
Rule 38    init -> IDENTIFIER EQUAL exp SEMICOLON
Rule 39    init -> IDENTIFIER SEMICOLON
Rule 40    increment -> IDENTIFIER OPERATOR
Rule 41    increment -> IDENTIFIER EQUAL exp
Rule 42    exp -> IDENTIFIER
Rule 43    exp -> NUMBER
Rule 44    exp -> CHAR
Rule 45    exp -> TRUE
Rule 46    exp -> FALSE
Rule 47    exp -> IDENTIFIER LBRACK NUMBER RBRACK
Rule 48    exp -> IDENTIFIER LBRACK IDENTIFIER RBRACK
Rule 49    exp -> exp OPERATOR exp
Rule 50    exp -> exp OPERATOR
Rule 51    array -> type IDENTIFIER LBRACK NUMBER RBRACK SEMICOLON
Rule 52    array -> type IDENTIFIER LBRACK NUMBER RBRACK EQUAL LBRACE elements_array RBRACE SEMICOLON
Rule 53    array -> type IDENTIFIER LBRACK RBRACK EQUAL LBRACE elements_array RBRACE SEMICOLON
Rule 54    array -> IDENTIFIER LBRACK NUMBER RBRACK EQUAL exp SEMICOLON
Rule 55    array -> IDENTIFIER LBRACK IDENTIFIER RBRACK EQUAL exp SEMICOLON
Rule 56    elements_array -> NUMBER
Rule 57    elements_array -> CHAR
Rule 58    elements_array -> TRUE
Rule 59    elements_array -> FALSE
Rule 60    elements_array -> elements_array COMMA elements_array
Rule 61    elements_array -> <empty>
Rule 62    print -> PRINTF LPAREN STRING COMMA arguments RPAREN SEMICOLON
Rule 63    arguments -> exp
Rule 64    arguments -> exp COMMA arguments
Rule 65    arguments -> IDENTIFIER
Rule 66    arguments -> IDENTIFIER COMMA arguments
Rule 67    arguments -> <empty>
Rule 68    type -> INT
Rule 69    type -> DOUBLE
Rule 70    type -> CHARS
Rule 71    type -> STRINGS
Rule 72    type -> BOOL
Rule 73    type -> VOID

Terminals, with rules where they appear

ANDAND               : 
BOOL                 : 72
CHAR                 : 35 44 57
CHARS                : 70
COMMA                : 13 19 60 62 64 66
DIVIDE               : 
DOUBLE               : 69
ELSE                 : 30 31
EQUAL                : 23 24 38 41 52 53 54 55
EQUALEQUAL           : 
FALSE                : 46 59
FOR                  : 32
FUNCTION             : 
GE                   : 
GT                   : 
IDENTIFIER           : 12 13 14 16 17 21 22 23 24 25 33 38 39 40 41 42 47 48 48 51 52 53 54 55 55 65 66
IF                   : 26 30
INT                  : 68
INVERTED_COMMA       : 
LBRACE               : 12 16 21 26 30 31 32 52 53
LBRACK               : 47 48 51 52 53 54 55
LE                   : 
LPAREN               : 12 16 17 21 26 30 32 62
LT                   : 
MINUS                : 
NOT                  : 
NOTEQUAL             : 
NUMBER               : 34 43 47 51 52 54 56
OPERATOR             : 22 40 49 50
OROR                 : 
PERCENTAGE           : 
PLUS                 : 
PRINTF               : 62
RBRACE               : 12 16 21 26 30 31 32 52 53
RBRACK               : 47 48 51 52 53 54 55
RELATIONALOPERATOR   : 36
RETURN               : 
RPAREN               : 12 16 17 21 26 30 32 62
SEMICOLON            : 17 22 23 24 25 37 38 39 51 52 53 54 55 62
SPACE                : 
STATEMENT            : 
STRING               : 62
STRINGS              : 71
TIMES                : 
TRUE                 : 45 58
VOID                 : 73
error                : 

Nonterminals, with rules where they appear

args                 : 12 13 16
arguments            : 62 64 66
array                : 8
assignment           : 5
elements_array       : 52 53 60 60
else                 : 28
else_elseif          : 26 27 28
elseif               : 27
exp                  : 18 19 23 24 38 41 49 49 50 54 55 63 64
exp_for              : 32
exp_if               : 26 30 36 36 37
for                  : 7
func                 : 9
if                   : 6
increment            : 37
init                 : 37
print                : 10
program              : 1 0
rec                  : 17 19
statement            : 1 3
statements           : 3 16 21 26 30 31 32
type                 : 12 13 14 16 21 24 25 51 52 53

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement program
    (2) program -> .
    (5) statement -> . assignment
    (6) statement -> . if
    (7) statement -> . for
    (8) statement -> . array
    (9) statement -> . func
    (10) statement -> . print
    (11) statement -> .
    (22) assignment -> . IDENTIFIER OPERATOR SEMICOLON
    (23) assignment -> . IDENTIFIER EQUAL exp SEMICOLON
    (24) assignment -> . type IDENTIFIER EQUAL exp SEMICOLON
    (25) assignment -> . type IDENTIFIER SEMICOLON
    (26) if -> . IF LPAREN exp_if RPAREN LBRACE statements RBRACE else_elseif
    (32) for -> . FOR LPAREN exp_for RPAREN LBRACE statements RBRACE
    (51) array -> . type IDENTIFIER LBRACK NUMBER RBRACK SEMICOLON
    (52) array -> . type IDENTIFIER LBRACK NUMBER RBRACK EQUAL LBRACE elements_array RBRACE SEMICOLON
    (53) array -> . type IDENTIFIER LBRACK RBRACK EQUAL LBRACE elements_array RBRACE SEMICOLON
    (54) array -> . IDENTIFIER LBRACK NUMBER RBRACK EQUAL exp SEMICOLON
    (55) array -> . IDENTIFIER LBRACK IDENTIFIER RBRACK EQUAL exp SEMICOLON
    (12) func -> . type IDENTIFIER LPAREN args RPAREN LBRACE RBRACE
    (16) func -> . type IDENTIFIER LPAREN args RPAREN LBRACE statements RBRACE
    (17) func -> . IDENTIFIER LPAREN rec RPAREN SEMICOLON
    (21) func -> . type IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (62) print -> . PRINTF LPAREN STRING COMMA arguments RPAREN SEMICOLON
    (68) type -> . INT
    (69) type -> . DOUBLE
    (70) type -> . CHARS
    (71) type -> . STRINGS
    (72) type -> . BOOL
    (73) type -> . VOID

  ! reduce/reduce conflict for $end resolved using rule 2 (program -> .)
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for PRINTF resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for CHARS resolved as shift
  ! shift/reduce conflict for STRINGS resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
    $end            reduce using rule 2 (program -> .)
    IDENTIFIER      shift and go to state 9
    IF              shift and go to state 11
    FOR             shift and go to state 12
    PRINTF          shift and go to state 13
    INT             shift and go to state 14
    DOUBLE          shift and go to state 15
    CHARS           shift and go to state 16
    STRINGS         shift and go to state 17
    BOOL            shift and go to state 18
    VOID            shift and go to state 19

  ! IDENTIFIER      [ reduce using rule 11 (statement -> .) ]
  ! IF              [ reduce using rule 11 (statement -> .) ]
  ! FOR             [ reduce using rule 11 (statement -> .) ]
  ! PRINTF          [ reduce using rule 11 (statement -> .) ]
  ! INT             [ reduce using rule 11 (statement -> .) ]
  ! DOUBLE          [ reduce using rule 11 (statement -> .) ]
  ! CHARS           [ reduce using rule 11 (statement -> .) ]
  ! STRINGS         [ reduce using rule 11 (statement -> .) ]
  ! BOOL            [ reduce using rule 11 (statement -> .) ]
  ! VOID            [ reduce using rule 11 (statement -> .) ]
  ! $end            [ reduce using rule 11 (statement -> .) ]

    program                        shift and go to state 1
    statement                      shift and go to state 2
    assignment                     shift and go to state 3
    if                             shift and go to state 4
    for                            shift and go to state 5
    array                          shift and go to state 6
    func                           shift and go to state 7
    print                          shift and go to state 8
    type                           shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> statement . program
    (1) program -> . statement program
    (2) program -> .
    (5) statement -> . assignment
    (6) statement -> . if
    (7) statement -> . for
    (8) statement -> . array
    (9) statement -> . func
    (10) statement -> . print
    (11) statement -> .
    (22) assignment -> . IDENTIFIER OPERATOR SEMICOLON
    (23) assignment -> . IDENTIFIER EQUAL exp SEMICOLON
    (24) assignment -> . type IDENTIFIER EQUAL exp SEMICOLON
    (25) assignment -> . type IDENTIFIER SEMICOLON
    (26) if -> . IF LPAREN exp_if RPAREN LBRACE statements RBRACE else_elseif
    (32) for -> . FOR LPAREN exp_for RPAREN LBRACE statements RBRACE
    (51) array -> . type IDENTIFIER LBRACK NUMBER RBRACK SEMICOLON
    (52) array -> . type IDENTIFIER LBRACK NUMBER RBRACK EQUAL LBRACE elements_array RBRACE SEMICOLON
    (53) array -> . type IDENTIFIER LBRACK RBRACK EQUAL LBRACE elements_array RBRACE SEMICOLON
    (54) array -> . IDENTIFIER LBRACK NUMBER RBRACK EQUAL exp SEMICOLON
    (55) array -> . IDENTIFIER LBRACK IDENTIFIER RBRACK EQUAL exp SEMICOLON
    (12) func -> . type IDENTIFIER LPAREN args RPAREN LBRACE RBRACE
    (16) func -> . type IDENTIFIER LPAREN args RPAREN LBRACE statements RBRACE
    (17) func -> . IDENTIFIER LPAREN rec RPAREN SEMICOLON
    (21) func -> . type IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
    (62) print -> . PRINTF LPAREN STRING COMMA arguments RPAREN SEMICOLON
    (68) type -> . INT
    (69) type -> . DOUBLE
    (70) type -> . CHARS
    (71) type -> . STRINGS
    (72) type -> . BOOL
    (73) type -> . VOID

  ! reduce/reduce conflict for $end resolved using rule 2 (program -> .)
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for PRINTF resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for CHARS resolved as shift
  ! shift/reduce conflict for STRINGS resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
    $end            reduce using rule 2 (program -> .)
    IDENTIFIER      shift and go to state 9
    IF              shift and go to state 11
    FOR             shift and go to state 12
    PRINTF          shift and go to state 13
    INT             shift and go to state 14
    DOUBLE          shift and go to state 15
    CHARS           shift and go to state 16
    STRINGS         shift and go to state 17
    BOOL            shift and go to state 18
    VOID            shift and go to state 19

  ! IDENTIFIER      [ reduce using rule 11 (statement -> .) ]
  ! IF              [ reduce using rule 11 (statement -> .) ]
  ! FOR             [ reduce using rule 11 (statement -> .) ]
  ! PRINTF          [ reduce using rule 11 (statement -> .) ]
  ! INT             [ reduce using rule 11 (statement -> .) ]
  ! DOUBLE          [ reduce using rule 11 (statement -> .) ]
  ! CHARS           [ reduce using rule 11 (statement -> .) ]
  ! STRINGS         [ reduce using rule 11 (statement -> .) ]
  ! BOOL            [ reduce using rule 11 (statement -> .) ]
  ! VOID            [ reduce using rule 11 (statement -> .) ]
  ! $end            [ reduce using rule 11 (statement -> .) ]

    statement                      shift and go to state 2
    program                        shift and go to state 20
    assignment                     shift and go to state 3
    if                             shift and go to state 4
    for                            shift and go to state 5
    array                          shift and go to state 6
    func                           shift and go to state 7
    print                          shift and go to state 8
    type                           shift and go to state 10

state 3

    (5) statement -> assignment .

    IDENTIFIER      reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    PRINTF          reduce using rule 5 (statement -> assignment .)
    INT             reduce using rule 5 (statement -> assignment .)
    DOUBLE          reduce using rule 5 (statement -> assignment .)
    CHARS           reduce using rule 5 (statement -> assignment .)
    STRINGS         reduce using rule 5 (statement -> assignment .)
    BOOL            reduce using rule 5 (statement -> assignment .)
    VOID            reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 4

    (6) statement -> if .

    IDENTIFIER      reduce using rule 6 (statement -> if .)
    IF              reduce using rule 6 (statement -> if .)
    FOR             reduce using rule 6 (statement -> if .)
    PRINTF          reduce using rule 6 (statement -> if .)
    INT             reduce using rule 6 (statement -> if .)
    DOUBLE          reduce using rule 6 (statement -> if .)
    CHARS           reduce using rule 6 (statement -> if .)
    STRINGS         reduce using rule 6 (statement -> if .)
    BOOL            reduce using rule 6 (statement -> if .)
    VOID            reduce using rule 6 (statement -> if .)
    $end            reduce using rule 6 (statement -> if .)
    RBRACE          reduce using rule 6 (statement -> if .)


state 5

    (7) statement -> for .

    IDENTIFIER      reduce using rule 7 (statement -> for .)
    IF              reduce using rule 7 (statement -> for .)
    FOR             reduce using rule 7 (statement -> for .)
    PRINTF          reduce using rule 7 (statement -> for .)
    INT             reduce using rule 7 (statement -> for .)
    DOUBLE          reduce using rule 7 (statement -> for .)
    CHARS           reduce using rule 7 (statement -> for .)
    STRINGS         reduce using rule 7 (statement -> for .)
    BOOL            reduce using rule 7 (statement -> for .)
    VOID            reduce using rule 7 (statement -> for .)
    $end            reduce using rule 7 (statement -> for .)
    RBRACE          reduce using rule 7 (statement -> for .)


state 6

    (8) statement -> array .

    IDENTIFIER      reduce using rule 8 (statement -> array .)
    IF              reduce using rule 8 (statement -> array .)
    FOR             reduce using rule 8 (statement -> array .)
    PRINTF          reduce using rule 8 (statement -> array .)
    INT             reduce using rule 8 (statement -> array .)
    DOUBLE          reduce using rule 8 (statement -> array .)
    CHARS           reduce using rule 8 (statement -> array .)
    STRINGS         reduce using rule 8 (statement -> array .)
    BOOL            reduce using rule 8 (statement -> array .)
    VOID            reduce using rule 8 (statement -> array .)
    $end            reduce using rule 8 (statement -> array .)
    RBRACE          reduce using rule 8 (statement -> array .)


state 7

    (9) statement -> func .

    IDENTIFIER      reduce using rule 9 (statement -> func .)
    IF              reduce using rule 9 (statement -> func .)
    FOR             reduce using rule 9 (statement -> func .)
    PRINTF          reduce using rule 9 (statement -> func .)
    INT             reduce using rule 9 (statement -> func .)
    DOUBLE          reduce using rule 9 (statement -> func .)
    CHARS           reduce using rule 9 (statement -> func .)
    STRINGS         reduce using rule 9 (statement -> func .)
    BOOL            reduce using rule 9 (statement -> func .)
    VOID            reduce using rule 9 (statement -> func .)
    $end            reduce using rule 9 (statement -> func .)
    RBRACE          reduce using rule 9 (statement -> func .)


state 8

    (10) statement -> print .

    IDENTIFIER      reduce using rule 10 (statement -> print .)
    IF              reduce using rule 10 (statement -> print .)
    FOR             reduce using rule 10 (statement -> print .)
    PRINTF          reduce using rule 10 (statement -> print .)
    INT             reduce using rule 10 (statement -> print .)
    DOUBLE          reduce using rule 10 (statement -> print .)
    CHARS           reduce using rule 10 (statement -> print .)
    STRINGS         reduce using rule 10 (statement -> print .)
    BOOL            reduce using rule 10 (statement -> print .)
    VOID            reduce using rule 10 (statement -> print .)
    $end            reduce using rule 10 (statement -> print .)
    RBRACE          reduce using rule 10 (statement -> print .)


state 9

    (22) assignment -> IDENTIFIER . OPERATOR SEMICOLON
    (23) assignment -> IDENTIFIER . EQUAL exp SEMICOLON
    (54) array -> IDENTIFIER . LBRACK NUMBER RBRACK EQUAL exp SEMICOLON
    (55) array -> IDENTIFIER . LBRACK IDENTIFIER RBRACK EQUAL exp SEMICOLON
    (17) func -> IDENTIFIER . LPAREN rec RPAREN SEMICOLON

    OPERATOR        shift and go to state 21
    EQUAL           shift and go to state 22
    LBRACK          shift and go to state 23
    LPAREN          shift and go to state 24


state 10

    (24) assignment -> type . IDENTIFIER EQUAL exp SEMICOLON
    (25) assignment -> type . IDENTIFIER SEMICOLON
    (51) array -> type . IDENTIFIER LBRACK NUMBER RBRACK SEMICOLON
    (52) array -> type . IDENTIFIER LBRACK NUMBER RBRACK EQUAL LBRACE elements_array RBRACE SEMICOLON
    (53) array -> type . IDENTIFIER LBRACK RBRACK EQUAL LBRACE elements_array RBRACE SEMICOLON
    (12) func -> type . IDENTIFIER LPAREN args RPAREN LBRACE RBRACE
    (16) func -> type . IDENTIFIER LPAREN args RPAREN LBRACE statements RBRACE
    (21) func -> type . IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE

    IDENTIFIER      shift and go to state 25


state 11

    (26) if -> IF . LPAREN exp_if RPAREN LBRACE statements RBRACE else_elseif
